--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ hr { margin-top: 20px; margin-bottom: 20px; border: 0; border-top: 1px solid rgb
 .btn-utama
 {
 	cursor: pointer;
-	background: #e67816;
+	background: #0887bf;
 	border-radius: 20px;
 	color: #fff;
 	position: relative;
@@ -107,7 +107,7 @@ hr { margin-top: 20px; margin-bottom: 20px; border: 0; border-top: 1px solid rgb
 {
 	cursor: pointer;
 	background: transparent;
-	color: #e67816;
+	color: #0887bf;
 	position: relative;
 	display: inline-block;
 	width: auto;
@@ -118,7 +118,7 @@ hr { margin-top: 20px; margin-bottom: 20px; border: 0; border-top: 1px solid rgb
 	line-height: 18px;
 	letter-spacing: 1.2px;
 	padding: 15px 25px;
-	border: 1px solid #e67816;
+	border: 1px solid #0887bf;
 	border-radius: 20px;
 	-webkit-transition: all 0.5;
 	-moz-transition: all 0.5s;
@@ -126,7 +126,7 @@ hr { margin-top: 20px; margin-bottom: 20px; border: 0; border-top: 1px solid rgb
 }
 .btn-kedua:hover
 {
-	color: #e67816;
+	color: #005880;
 	box-shadow: 1px 1px 2px 2px hsla(0,0%,0%,0.1);
 }
 .btn-pols
@@ -473,7 +473,7 @@ label.control-label
 	letter-spacing: 1.5px;
 }
 .main-color{
-	color: #e67816 !important;
+	color: #0887bf !important;
 }
 .black{
 	color: #1b262c !important;
@@ -593,7 +593,7 @@ header {
 header nav
 {
 	overflow: hidden;
-	padding: 15px;
+	padding: 5px;
 }
 header nav ul {
 	list-style: none;
@@ -611,7 +611,7 @@ header nav .logo {
 }
 img.navbar-logo
 {
-	margin: 10px 10px 0px 10px;
+	margin: 15px 10px 0px 10px;
 	width: 125px;
 	object-fit: contain;
 }
@@ -676,7 +676,7 @@ header nav ul li a {
 	line-height: 28px;
 	letter-spacing: 1.2px;
 	padding: 10px 0;
-	color: #e67816;
+	color: #0887bf;
 	transition: color .3s ease;
 }
 ul.menu-left {
@@ -693,7 +693,7 @@ ul.menu-left {
 	z-index: 10;
 }
 ul.menu-left:before {
-	line-height: 90px;
+	line-height: 70px;
 	content: '';
 	display: table;
 	clear: both;
@@ -720,7 +720,7 @@ ul.menu-right li .li-register.btn-kedua
 }
 ul.menu-right li .li-logout.btn-pols:hover
 {
-	color: #FF4C13;
+	color: #0887bf;
 	border-bottom: 1px solid #FF4C13;
 }
 ul.menu-right li .btn-pols
@@ -851,10 +851,10 @@ ul.menu-right li.li-logout:hover .btn-pols
 /*====================================== SECTION LANDING PAGE ======================================*/
 .section-hero
 {
-	background-image: url("../images/hero-bg.svg");
-	background-size: 800px;
+	background-image: url("../images/sekolaa.jpg");
+	background-size: 1500px;
 	background-repeat: no-repeat;
-	background-position: right 50px top 100px;
+	/*background-position: right 0px top 2px;*/
 }
 .hero-left, .hero-right
 {
@@ -871,10 +871,25 @@ ul.menu-right li.li-logout:hover .btn-pols
 }
 .hero-left .wrapper h1
 {
-	font-size: 60px;
+	font-size: 55px;
 	letter-spacing: 2px;
 	line-height: 68px;
 }
+
+.cover
+{
+	z-index: 0;
+	position: absolute;
+	background: aliceblue;
+	top: 50%;
+	height: 390px;
+	width: 100%;
+	left: -30px;
+	border-radius: 5px;
+	opacity: 0.8;
+	transform: translateY(-50%)
+}
+
 @keyframes updown_one {
 	0% {
 		transform: translateY(-20%);
@@ -987,9 +1002,12 @@ ul.menu-right li.li-logout:hover .btn-pols
 }
 .intermezo-image
 {
-	height: 500px;
-	background-image: url("../images/hero-about.svg");
-	background-size: contain;
+	height: 400px;
+	width: 400px;
+	border-radius: 200px;
+	margin: auto;
+	background-image: url("../images/about.jpg");
+	background-size: 900px;
 	background-repeat: no-repeat;
 	background-position: center;
 }
